--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
             <h2 class="te-amo">Te amo ❤️</h2>
         </div>
     </div>
-    <script src="scrpt.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
